--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -12,8 +12,8 @@
 }
 
 .hero h1{
-  position: relative;
-  top: 150px;
+  padding-top: 200px;
   text-align: center;
   color: white;
+  margin: 0px;
 }
